--- a/app/src/main/res/layout/activity_login_ponpes.xml
+++ b/app/src/main/res/layout/activity_login_ponpes.xml
@@ -39,9 +39,17 @@
 <!--                android:textColor="@color/black"-->
 <!--                android:text="Presensi" />-->
 
-            <ImageView android:src="@drawable/ic_masukkan_kode_pesantren_anda"
+<!--            <ImageView android:src="@drawable/ic_masukkan_kode_pesantren_anda"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content" />-->
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="Masukkan Kode Pesantren Anda:"
+                android:textSize="15sp"
+                android:textStyle="bold">
+
+            </TextView>
 
             <!--  Kode Sekolah Label -->
             <com.google.android.material.textfield.TextInputLayout
