--- a/app/src/main/res/layout/activity_upload_image.xml
+++ b/app/src/main/res/layout/activity_upload_image.xml
@@ -109,7 +109,7 @@
 
             </LinearLayout>
 
-        <LinearLayout
+            <LinearLayout
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -137,6 +137,27 @@
         </LinearLayout>
 
             <!-- To display picture taken -->
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+
+                <TextView
+                    android:id="@+id/isicatatan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="11dp"
+                    android:layout_marginEnd="273dp"
+                    android:layout_marginBottom="10dp"
+                    android:text="Harap Isi Catatan"
+                    android:textColor="@color/black"
+                    android:textStyle="bold|italic" />
+
+            </RelativeLayout>
 
             <ImageView
                 android:id="@+id/imgPreview"
