--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,7 +72,7 @@
 
             <LinearLayout
                 android:id="@+id/layout_atas"
-                android:layout_width="wrap_content"
+                android:layout_width="332dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
@@ -99,11 +99,11 @@
                     android:orientation="horizontal">
 
                     <TextClock
-                        android:format24Hour="H:mm:ss"
-                        android:format12Hour="H:mm:ss"
-                        android:textAppearance="@style/some_id"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:format12Hour="H:mm:ss"
+                        android:format24Hour="H:mm:ss"
+                        android:textAppearance="@style/some_id" />
 
                     <TextView
                         android:id="@+id/wib"
@@ -191,29 +191,65 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="16dp"
                         android:layout_gravity="center"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="10dp"
                         android:onClick="checkIn"
                         android:src="@drawable/ic_absen_datang" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="16dp"
                         android:layout_gravity="center"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="10dp"
                         android:onClick="checkOut"
                         android:src="@drawable/ic_absen_pulang" />
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
                         android:layout_marginLeft="16dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginRight="16dp"
                         android:onClick="ijinCuti"
                         android:src="@drawable/ic_absen_ijin" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <Button
+                            android:id="@+id/laporanweb"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:text="Laporan Web">
+
+                        </Button>
+
+                        <Button
+                            android:id="@+id/setelpengingat"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="33dp"
+                            android:text="Set Pengingat">
+
+                        </Button>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
